# profile_estimator

./: .gitignore  README  README.md  courses_exams_extractor.ipynb  courses_exams_profiles_dump.json  text_categorization copy.ipynb  text_categorization.ipynb
data/courses_exams/: 1.txt  2.txt  3.txt  4.txt  5.txt  no_courses_1.txt  no_courses_2.txt  no_courses_3.txt
data/courses_exams/data/: profiles ALL.json  profiles CUT OFF.json  profiles.json
data/data_engineers/: 1.txt  2.txt  3.txt
data/data_scientists/: 1.txt  2.txt  3.txt
web_api/: pyproject.toml
web_api/src/web_api/: main.py
