[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["Marat Khabibullin <marat_khabibullin@epam.com>"]
readme = "README.md"
packages = [{include = "web_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
tensorflow-io-gcs-filesystem = "0.27.0"
libclang = "14.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
